// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`top-nav/presenters/HelpButtonPresenter  1`] = `
.emotion-1 {
  border: 2px solid transparent;
  display: inline-block;
  position: relative;
  cursor: pointer;
  box-sizing: border-box;
  border-radius: 2px;
  padding: 0;
  height: calc(20px + (8px * 2));
  line-height: calc(20px + (8px * 2));
  width: calc(20px + (8px * 2));
  outline: 0;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
  box-shadow: none;
  background-color: transparent;
}

.emotion-1 svg * {
  fill: #808080;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: fill;
  transition-property: fill;
}

.emotion-0 {
  fill: #808080;
  pointer-events: none;
  position: absolute;
  left: 0;
  right: 0;
  margin: 0 auto;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  pointer-events: none;
}

.emotion-0 > * {
  fill: #808080;
  pointer-events: none;
}

<button
  className="emotion-1"
  onBlur={[Function]}
  onClick={undefined}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  title="View help"
>
  <svg
    className="emotion-0"
    height="24px"
    viewBox="0 0 24 24"
    width="24px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      help-24
    </title>
    <path
      d="M12 3a9 9 0 1 0 9 9 9 9 0 0 0-9-9zm0 17a8 8 0 1 1 8-8 8 8 0 0 1-8 8z"
    />
    <path
      d="M12.35 6.33A3.15 3.15 0 0 0 9 9.23v.24l1.49.32v-.25c.23-1.19.83-1.77 1.83-1.77a1.77 1.77 0 0 1 1.15.38 1.18 1.18 0 0 1 .46 1 1.45 1.45 0 0 1-.48 1.08 6 6 0 0 1-.8.51 3.91 3.91 0 0 0-.77.5 1.55 1.55 0 0 0-.32.48 1.79 1.79 0 0 0-.17.6c0 .19-.08 1.44-.08 2.15v.25h1.5v-1.83a.89.89 0 0 1 .12-.55 2.73 2.73 0 0 1 .83-.55 2.91 2.91 0 0 0 1.85-2.61 2.66 2.66 0 0 0-.91-2.06 3.41 3.41 0 0 0-2.35-.79z"
    />
    <circle
      cx="12"
      cy="17"
      r="1"
    />
  </svg>
</button>
`;

exports[`top-nav/presenters/HelpButtonPresenter  2`] = `
.emotion-1 {
  border: 2px solid transparent;
  display: inline-block;
  position: relative;
  cursor: pointer;
  box-sizing: border-box;
  border-radius: 2px;
  padding: 0;
  height: calc(20px + (8px * 2));
  line-height: calc(20px + (8px * 2));
  width: calc(20px + (8px * 2));
  outline: 0;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
  box-shadow: none;
  background-color: transparent;
}

.emotion-1 svg * {
  fill: #808080;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: fill;
  transition-property: fill;
}

.emotion-0 {
  fill: #808080;
  pointer-events: none;
  position: absolute;
  left: 0;
  right: 0;
  margin: 0 auto;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  pointer-events: none;
}

.emotion-0 > * {
  fill: #808080;
  pointer-events: none;
}

<button
  className="emotion-1"
  onBlur={[Function]}
  onClick={undefined}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  title="View help"
>
  <svg
    className="emotion-0"
    height="24px"
    viewBox="0 0 24 24"
    width="24px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      help-24
    </title>
    <path
      d="M12 3a9 9 0 1 0 9 9 9 9 0 0 0-9-9zm0 17a8 8 0 1 1 8-8 8 8 0 0 1-8 8z"
    />
    <path
      d="M12.35 6.33A3.15 3.15 0 0 0 9 9.23v.24l1.49.32v-.25c.23-1.19.83-1.77 1.83-1.77a1.77 1.77 0 0 1 1.15.38 1.18 1.18 0 0 1 .46 1 1.45 1.45 0 0 1-.48 1.08 6 6 0 0 1-.8.51 3.91 3.91 0 0 0-.77.5 1.55 1.55 0 0 0-.32.48 1.79 1.79 0 0 0-.17.6c0 .19-.08 1.44-.08 2.15v.25h1.5v-1.83a.89.89 0 0 1 .12-.55 2.73 2.73 0 0 1 .83-.55 2.91 2.91 0 0 0 1.85-2.61 2.66 2.66 0 0 0-.91-2.06 3.41 3.41 0 0 0-2.35-.79z"
    />
    <circle
      cx="12"
      cy="17"
      r="1"
    />
  </svg>
</button>
`;

exports[`top-nav/presenters/HelpButtonPresenter  3`] = `
.emotion-1 {
  border: 2px solid transparent;
  display: inline-block;
  position: relative;
  cursor: pointer;
  box-sizing: border-box;
  border-radius: 2px;
  padding: 0;
  height: calc(20px + (8px * 2));
  line-height: calc(20px + (8px * 2));
  width: calc(20px + (8px * 2));
  outline: 0;
  -webkit-transition-property: box-shadow,background-color;
  transition-property: box-shadow,background-color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
  box-shadow: none;
  background-color: transparent;
}

.emotion-1 svg * {
  fill: #808080;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: fill;
  transition-property: fill;
}

.emotion-0 {
  fill: #808080;
  pointer-events: none;
  position: absolute;
  left: 0;
  right: 0;
  margin: 0 auto;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  pointer-events: none;
}

.emotion-0 > * {
  fill: #808080;
  pointer-events: none;
}

<button
  className="emotion-1"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  title="View help"
>
  <svg
    className="emotion-0"
    height="24px"
    viewBox="0 0 24 24"
    width="24px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      help-24
    </title>
    <path
      d="M12 3a9 9 0 1 0 9 9 9 9 0 0 0-9-9zm0 17a8 8 0 1 1 8-8 8 8 0 0 1-8 8z"
    />
    <path
      d="M12.35 6.33A3.15 3.15 0 0 0 9 9.23v.24l1.49.32v-.25c.23-1.19.83-1.77 1.83-1.77a1.77 1.77 0 0 1 1.15.38 1.18 1.18 0 0 1 .46 1 1.45 1.45 0 0 1-.48 1.08 6 6 0 0 1-.8.51 3.91 3.91 0 0 0-.77.5 1.55 1.55 0 0 0-.32.48 1.79 1.79 0 0 0-.17.6c0 .19-.08 1.44-.08 2.15v.25h1.5v-1.83a.89.89 0 0 1 .12-.55 2.73 2.73 0 0 1 .83-.55 2.91 2.91 0 0 0 1.85-2.61 2.66 2.66 0 0 0-.91-2.06 3.41 3.41 0 0 0-2.35-.79z"
    />
    <circle
      cx="12"
      cy="17"
      r="1"
    />
  </svg>
</button>
`;
